# SimTrace

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
architecture/: agent_architecture.mmd  blackboard.mmd  conservation.md  edge_tools.md  item_flow.md  node_tools.md  simulation_tools.md
examples/: chair-workshop.md
scripts/: trace_smoke.py
src/agents/: __init__.py  supervisor_agent.py
src/schemas/: production-des-schema.json
src/simgen/: model.py  server.py
src/simgen/tools/: nodes.py  registry.py  simulation.py  telemetry.py  utils.py  validation.py
src/simgen/tools/builders/: __init__.py  edges.py
src/simgen/tools/simulation/: __init__.py  graph.py  lifecycle.py
src/simgen/tools/validation/: __init__.py  conservation.py  item_flow.py
src/simtrace/: server.py
src/simtrace/tools/: distributions.py  registry.py  telemetry.py  utils.py
src/simtrace/tools/builders/: __init__.py  edges.py  nodes.py
src/simtrace/tools/simulation/: __init__.py  graph.py  lifecycle.py
src/simtrace/tools/validation/: __init__.py  conservation.py  item_flow.py
tests/: output.json  test-dashboard.html  test-dashboard.ps1
tests/test_tools/: test_distributions.py  test_edges.py  test_nodes.py  test_registry.py  test_simulation.py  test_structural_pattern.py  test_telemetry.py  test_validation.py
