[project]
name = "simgen-agent"
version = "0.1.0"
description = "Traceable, tool-building DES agent for SimPy models, driven by the Claude API over MCP."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0",
    "numpy>=1.24",
    "factorysimpy",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
simgen = "simgen.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.uv.sources]
factorysimpy = { path = "vendor/FactorySimPy", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
